--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,5 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+  margin-top: 20px;
 }
 
 .App-header {
