--- a/src/components/App/index.css
+++ b/src/components/App/index.css
@@ -1,3 +1,13 @@
+body {
+	margin: 0;
+	padding: 0;
+	font-family: sans-serif;
+}
+
+a, a:hover{
+    text-decoration: none;
+}
+
 .App {
   margin-top: 20px;
 }
